# discord_mod_mail

./: .env.example  README.md  compose.yaml
bot/: Cargo.toml  Dockerfile
bot/src/: main.rs  storage.rs
bot/src/commands/: actions.rs
bot/src/commands/actions/: send_anonymous_message.rs  send_message.rs
bot/src/commands/settings/: register_channel.rs
