[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
dotenv = "0.15.0"
itertools = "0.12.0"
json = "0.12.4"
lazy_static = "1.4.0"
poise = "0.5.7"
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["default", "json"] }
sql_lexer = "0.9.5"
tokio = {version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

